--- a/pyWS2.ipynb
+++ b/pyWS2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "pyWS2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOoLthJOckK43XntqER2cAt",
+      "authorship_tag": "ABX9TyNpW0+41yeb6CJc+0SrdHIL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1212,6 +1212,442 @@
             "enter the number 5\n",
             "[1, 3, 5]\n",
             "[2, 4]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lEamvM5XA14F",
+        "outputId": "aba01e39-8dd7-45d5-ec43-ee89a6637b5f"
+      },
+      "source": [
+        "for x in range(1,21):\r\n",
+        "  print(x)"
+      ],
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n",
+            "20\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7f24BYPwBw3P",
+        "outputId": "044bc9aa-d5b3-4248-f391-8ff676577afd"
+      },
+      "source": [
+        "mylist=[]\r\n",
+        "for i in range(1,21):\r\n",
+        "  mylist.append(i)\r\n",
+        "print(mylist)"
+      ],
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LOpN8zUGDSlG",
+        "outputId": "644662d1-6fbb-499a-9b8d-dc8c0646ea04"
+      },
+      "source": [
+        "evenlist=[i for i in range(1,21)if i%2==0]\r\n",
+        "print(evenlist)"
+      ],
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8m2BNmdXE4Y-",
+        "outputId": "ad28a74f-a1d1-481b-ad12-0d5ff15cf114"
+      },
+      "source": [
+        "odd=[i*i for i in range(1,21)if i%2!=0]\r\n",
+        "print(odd)"
+      ],
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 9, 25, 49, 81, 121, 169, 225, 289, 361]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TYA2mEkgFUNt",
+        "outputId": "9c17cd26-5f84-45da-e156-ff3b724ad871"
+      },
+      "source": [
+        "if -1:\r\n",
+        "  print(\"shinichi\")\r\n",
+        "else:\r\n",
+        "  print(\"kudo\")"
+      ],
+      "execution_count": 162,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "shinichi\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "faMBLJHrGoP-",
+        "outputId": "3279cb47-e75b-4300-c006-bd719646a4b1"
+      },
+      "source": [
+        "mylist=[1,1,2,3,4]\r\n",
+        "print(all(mylist))"
+      ],
+      "execution_count": 163,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fEHjwgYUG0b2",
+        "outputId": "153f10af-701d-40c6-feeb-f06da98ec12c"
+      },
+      "source": [
+        "mylist=[1,1,2,3,4,0]\r\n",
+        "print(all(mylist))"
+      ],
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eL13ZkxGHUmV",
+        "outputId": "e942d623-5d6a-4e80-98ab-e692095b95c8"
+      },
+      "source": [
+        "list=[]\r\n",
+        "for i in range(2,21):\r\n",
+        "  isPrime=True\r\n",
+        "  for j in range(2,i):\r\n",
+        "    if i%j==0:\r\n",
+        "      isPrime=False\r\n",
+        "  if isPrime:\r\n",
+        "    list.append(i)\r\n",
+        "print(list)"
+      ],
+      "execution_count": 178,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 3, 5, 7, 11, 13, 17, 19]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u8elrlvEJRU3",
+        "outputId": "617a0df9-5d3b-41c8-a4cb-3a63f5bd85ad"
+      },
+      "source": [
+        "primelist=[i for i in range(2,21)if all(i%j!=0 for j in range(2,i))]\r\n",
+        "print(primelist)"
+      ],
+      "execution_count": 179,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 3, 5, 7, 11, 13, 17, 19]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e-1UjGkdMZA6",
+        "outputId": "64f717f8-cbe5-4673-99bb-4e96d6ed5331"
+      },
+      "source": [
+        "print(all([7%j!=0 for j in range(2,7)]))"
+      ],
+      "execution_count": 187,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6JDZhoAQOffO",
+        "outputId": "a79077b2-5af3-48b9-ab17-58146b8cf9a2"
+      },
+      "source": [
+        "sqr=[(i*i) for i in range(1,26)if i*i<25]\r\n",
+        "print(sqr)"
+      ],
+      "execution_count": 191,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 9, 16]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mOSUmA5iU-W_",
+        "outputId": "60b4423d-ad0e-4b6c-f64b-e0ad922a9c33"
+      },
+      "source": [
+        "def my_function(a,b,c=3):\r\n",
+        "  print(a,b,c)\r\n",
+        "my_function(\"jack\",\"jill\")\r\n"
+      ],
+      "execution_count": 198,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "jack jill 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mG31-LHEcpkw",
+        "outputId": "a61cea51-bc22-4d40-8629-814ec9441088"
+      },
+      "source": [
+        "lst=[\"shreyas\",\"pawan\",\"rakshith\",\"shashank\"]   #list\r\n",
+        "print(lst)"
+      ],
+      "execution_count": 199,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['shreyas', 'pawan', 'rakshith', 'shashank']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5lX0CYY8dCfG",
+        "outputId": "5a483b8f-9230-4a18-d2c8-df320f5dbc1c"
+      },
+      "source": [
+        "physics=int(input())\r\n",
+        "chemistry=int(input())\r\n",
+        "print(\"shreyas =\"+str(physics+chemistry))"
+      ],
+      "execution_count": 207,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "10\n",
+            "shreyas =20\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "03LDBT_YefPX",
+        "outputId": "5e6febf3-d2c7-40fb-b1b4-a1bfd933c89b"
+      },
+      "source": [
+        "physics=int(input())\r\n",
+        "chemistry=int(input())\r\n",
+        "print(\"shinichi =\"+str(physics+chemistry))"
+      ],
+      "execution_count": 208,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "10\n",
+            "shinichi =20\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cfA8Gt4ce6mO",
+        "outputId": "6a28db8b-583b-41af-d473-5ac2a40fdf7b"
+      },
+      "source": [
+        "def marks11(name):\r\n",
+        "  physics=int(input(\"enter\" + name + \" physics marks\"))\r\n",
+        "  chemistry=int(input(\"enter\" + name + \" chemistry marks\"))\r\n",
+        "  return physics+chemistry\r\n",
+        "st=[\"jack\",\"jill\",\"yuiji\",\"satoru\"]\r\n",
+        "for i in st:\r\n",
+        "  print(marks(i))"
+      ],
+      "execution_count": 219,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enterjack physics marks10\n",
+            "enterjack chemistry marks10\n",
+            "20\n",
+            "enterjill physics marks10\n",
+            "enterjill chemistry marks10\n",
+            "20\n",
+            "enteryuiji physics marks10\n",
+            "enteryuiji chemistry marks0\n",
+            "10\n",
+            "entersatoru physics marks10\n",
+            "entersatoru chemistry marks0\n",
+            "10\n"
           ],
           "name": "stdout"
         }
